[gd_scene load_steps=24 format=1]

[ext_resource path="res://main/gui.gd" type="Script" id=1]
[ext_resource path="res://gfx/turn_icon.png" type="Texture" id=2]
[ext_resource path="res://shared/theme.tres" type="Theme" id=3]
[ext_resource path="res://gfx/radioactive.png" type="Texture" id=4]
[ext_resource path="res://gfx/flower.png" type="Texture" id=5]
[ext_resource path="res://gfx/artefact.png" type="Texture" id=6]
[ext_resource path="res://gfx/bomb.png" type="Texture" id=7]
[ext_resource path="res://gfx/btn_arrow.png" type="Texture" id=8]
[ext_resource path="res://gfx/btn_bomb.png" type="Texture" id=9]
[ext_resource path="res://gfx/btn_alpha.png" type="Texture" id=10]
[ext_resource path="res://main/resize_to_parent.gd" type="Script" id=11]
[ext_resource path="res://gfx/return.png" type="Texture" id=12]
[ext_resource path="res://gfx/menuGrid.png" type="Texture" id=13]
[ext_resource path="res://main/popup.tscn" type="PackedScene" id=14]
[ext_resource path="res://main/level_holder.gd" type="Script" id=15]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=16]
[ext_resource path="res://audio/samples.tres" type="SampleLibrary" id=17]
[ext_resource path="res://main/music.gd" type="Script" id=18]
[ext_resource path="res://audio/music_1.ogg" type="AudioStream" id=19]
[ext_resource path="res://audio/music_2.ogg" type="AudioStream" id=20]
[ext_resource path="res://audio/music_3.ogg" type="AudioStream" id=21]
[ext_resource path="res://audio/music_4.ogg" type="AudioStream" id=22]
[ext_resource path="res://audio/music_5.ogg" type="AudioStream" id=23]

[node name="world" type="Node2D"]

__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="gui" type="CanvasLayer" parent="."]

process/pause_mode = 2
layer = 0
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="counters" type="VBoxContainer" parent="gui"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 8.0
margin/right = 8.0
margin/bottom = 68.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="resources" type="HBoxContainer" parent="gui/counters"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1008.0
margin/bottom = 32.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="turns" type="HBoxContainer" parent="gui/counters/resources"]

rect/min_size = Vector2( 120, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 32.0
alignment = 0

[node name="texture" type="TextureFrame" parent="gui/counters/resources/turns"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
texture = ExtResource( 2 )
expand = true

[node name="label" type="Label" parent="gui/counters/resources/turns"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
theme/theme = ExtResource( 3 )
margin/left = 36.0
margin/top = 3.0
margin/right = 120.0
margin/bottom = 28.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="box" type="HBoxContainer" parent="gui/counters/resources"]

rect/min_size = Vector2( 120, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 124.0
margin/top = 0.0
margin/right = 244.0
margin/bottom = 32.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="texture" type="TextureFrame" parent="gui/counters/resources/box"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
texture = ExtResource( 4 )
expand = true

[node name="label" type="Label" parent="gui/counters/resources/box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
theme/theme = ExtResource( 3 )
margin/left = 36.0
margin/top = 3.0
margin/right = 120.0
margin/bottom = 28.0
text = "1 / 2"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="flower" type="HBoxContainer" parent="gui/counters/resources"]

rect/min_size = Vector2( 120, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 248.0
margin/top = 0.0
margin/right = 368.0
margin/bottom = 32.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="texture" type="TextureFrame" parent="gui/counters/resources/flower"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="label" type="Label" parent="gui/counters/resources/flower"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
theme/theme = ExtResource( 3 )
margin/left = 36.0
margin/top = 3.0
margin/right = 120.0
margin/bottom = 28.0
text = "1 / 2"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="artefact" type="HBoxContainer" parent="gui/counters/resources"]

rect/min_size = Vector2( 120, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 372.0
margin/top = 0.0
margin/right = 492.0
margin/bottom = 32.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="texture" type="TextureFrame" parent="gui/counters/resources/artefact"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
texture = ExtResource( 6 )
expand = true

[node name="label" type="Label" parent="gui/counters/resources/artefact"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
theme/theme = ExtResource( 3 )
margin/left = 36.0
margin/top = 3.0
margin/right = 120.0
margin/bottom = 28.0
text = "1 / 2"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bomb" type="HBoxContainer" parent="gui/counters"]

rect/min_size = Vector2( 120, 32 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 36.0
margin/right = 1008.0
margin/bottom = 68.0
alignment = 0

[node name="texture" type="TextureFrame" parent="gui/counters/bomb"]

rect/min_size = Vector2( 32, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 1
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0
texture = ExtResource( 7 )
expand = true

[node name="label" type="Label" parent="gui/counters/bomb"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
theme/theme = ExtResource( 3 )
margin/left = 36.0
margin/top = 3.0
margin/right = 1008.0
margin/bottom = 28.0
text = " x 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="touch_controls" type="Control" parent="gui"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="buttons" type="GridContainer" parent="gui/touch_controls"]

visibility/visible = false
anchor/left = 1
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 224.0
margin/top = 224.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 3
__meta__ = { "_editor_collapsed":true }

[node name="hole-up-left" type="Control" parent="gui/touch_controls/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0

[node name="up" type="Control" parent="gui/touch_controls/buttons"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 144.0
margin/bottom = 64.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/buttons/up"]

normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = "btn_up"
visibility_mode = 1

[node name="hole-up-right" type="Control" parent="gui/touch_controls/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 64.0

[node name="left" type="Control" parent="gui/touch_controls/buttons"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 64.0
margin/bottom = 144.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/buttons/left"]

transform/pos = Vector2( 0, 64 )
transform/rot = 90.0
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = "btn_left"
visibility_mode = 1

[node name="bomb" type="Control" parent="gui/touch_controls/buttons"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 80.0
margin/right = 144.0
margin/bottom = 144.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/buttons/bomb"]

normal = ExtResource( 9 )
pressed = null
bitmask = null
passby_press = false
action = "place_bomb"
visibility_mode = 1

[node name="right" type="Control" parent="gui/touch_controls/buttons"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 80.0
margin/right = 224.0
margin/bottom = 144.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/buttons/right"]

transform/pos = Vector2( 64, 0 )
transform/rot = 270.0
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = "btn_right"
visibility_mode = 1

[node name="hole-down-left" type="Control" parent="gui/touch_controls/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 64.0
margin/bottom = 224.0

[node name="down" type="Control" parent="gui/touch_controls/buttons"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 160.0
margin/right = 144.0
margin/bottom = 224.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/buttons/down"]

transform/pos = Vector2( 64, 64 )
transform/rot = 180.0
normal = ExtResource( 8 )
pressed = null
bitmask = null
passby_press = false
action = "btn_down"
visibility_mode = 1

[node name="hole-down-right" type="Control" parent="gui/touch_controls/buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 160.0
margin/right = 224.0
margin/bottom = 224.0

[node name="areas" type="Control" parent="gui/touch_controls"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="sides" type="VBoxContainer" parent="gui/touch_controls/areas"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 0
alignment = 0

[node name="up" type="HBoxContainer" parent="gui/touch_controls/areas/sides"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 128.0
custom_constants/separation = 0
alignment = 0

[node name="hole-up-left" type="Control" parent="gui/touch_controls/areas/sides/up"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 170.0
margin/bottom = 128.0

[node name="up" type="Control" parent="gui/touch_controls/areas/sides/up"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 4.0
margin/left = 170.0
margin/top = 0.0
margin/right = 852.0
margin/bottom = 128.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/areas/sides/up/up"]

transform/pos = Vector2( 2.03252e-05, 3.8147e-06 )
transform/scale = Vector2( 341, 64 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
passby_press = false
action = "btn_up"
visibility_mode = 1
script/script = ExtResource( 11 )
centered = false

[node name="hole-up-right" type="Control" parent="gui/touch_controls/areas/sides/up"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 852.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 128.0

[node name="center" type="HBoxContainer" parent="gui/touch_controls/areas/sides"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 4.0
margin/left = 0.0
margin/top = 128.0
margin/right = 1024.0
margin/bottom = 640.0
custom_constants/separation = 0
alignment = 0

[node name="left" type="Control" parent="gui/touch_controls/areas/sides/center"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 170.0
margin/bottom = 512.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/areas/sides/center/left"]

transform/pos = Vector2( 5.06639e-06, 512 )
transform/rot = 90.0
transform/scale = Vector2( 256, 85 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
passby_press = false
action = "btn_left"
visibility_mode = 1
script/script = ExtResource( 11 )
centered = false

[node name="hole-center" type="Control" parent="gui/touch_controls/areas/sides/center"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 4.0
margin/left = 170.0
margin/top = 0.0
margin/right = 852.0
margin/bottom = 512.0

[node name="right" type="Control" parent="gui/touch_controls/areas/sides/center"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 852.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 512.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/areas/sides/center/right"]

transform/pos = Vector2( 172, 4.57764e-05 )
transform/rot = -90.0
transform/scale = Vector2( 256, 86 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
passby_press = false
action = "btn_right"
visibility_mode = 1
script/script = ExtResource( 11 )
centered = false

[node name="down" type="HBoxContainer" parent="gui/touch_controls/areas/sides"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 640.0
margin/right = 1024.0
margin/bottom = 768.0
custom_constants/separation = 0
alignment = 0

[node name="hole-down-left" type="Control" parent="gui/touch_controls/areas/sides/down"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 170.0
margin/bottom = 128.0

[node name="down" type="Control" parent="gui/touch_controls/areas/sides/down"]

rect/min_size = Vector2( 64, 64 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 4.0
margin/left = 170.0
margin/top = 0.0
margin/right = 852.0
margin/bottom = 128.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/areas/sides/down/down"]

transform/pos = Vector2( 682, 128 )
transform/rot = -180.0
transform/scale = Vector2( 341, 64 )
normal = ExtResource( 10 )
pressed = null
bitmask = null
passby_press = false
action = "btn_down"
visibility_mode = 1
script/script = ExtResource( 11 )
centered = false

[node name="bomb" type="Control" parent="gui/touch_controls/areas/sides/down"]

rect/min_size = Vector2( 70, 70 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 852.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 128.0
__meta__ = { "_editor_collapsed":true }

[node name="button" type="TouchScreenButton" parent="gui/touch_controls/areas/sides/down/bomb"]

transform/pos = Vector2( 6, 6 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
passby_press = false
action = "place_bomb"
visibility_mode = 1

[node name="top_left_buttons" type="HBoxContainer" parent="gui"]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 204.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 100.0
alignment = 0
__meta__ = { "_editor_collapsed":true }

[node name="retry" type="TextureButton" parent="gui/top_left_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 100.0
toggle_mode = false
textures/normal = ExtResource( 12 )

[node name="menu" type="TextureButton" parent="gui/top_left_buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 104.0
margin/top = 0.0
margin/right = 204.0
margin/bottom = 100.0
toggle_mode = false
textures/normal = ExtResource( 13 )

[node name="popup" parent="gui" instance=ExtResource( 14 )]

visibility/visible = false
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="timer" type="Timer" parent="gui"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="level_holder" type="Node2D" parent="."]

script/script = ExtResource( 15 )
acid_animation_time = 1.0

[node name="player_holder" type="Node2D" parent="."]

transform/pos = Vector2( 32, 32 )

[node name="player" parent="player_holder" instance=ExtResource( 16 )]

transform/pos = Vector2( 228.814, 197.081 )

[node name="sample_player" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = ExtResource( 17 )
default/volume_db = -7.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 0.0
default/filter/resonance = 0.0
default/filter/gain = 0.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="music" type="Node" parent="."]

script/script = ExtResource( 18 )

[node name="1" type="StreamPlayer" parent="music"]

stream/stream = ExtResource( 19 )
stream/play = false
stream/loop = true
stream/volume_db = -2.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="2" type="StreamPlayer" parent="music"]

stream/stream = ExtResource( 20 )
stream/play = false
stream/loop = true
stream/volume_db = -9.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="3" type="StreamPlayer" parent="music"]

stream/stream = ExtResource( 21 )
stream/play = false
stream/loop = true
stream/volume_db = -2.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="4" type="StreamPlayer" parent="music"]

stream/stream = ExtResource( 22 )
stream/play = false
stream/loop = true
stream/volume_db = -6.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="5" type="StreamPlayer" parent="music"]

stream/stream = ExtResource( 23 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="gui/top_left_buttons/retry" to="level_holder" method="retry_level"]

[connection signal="pressed" from="gui/top_left_buttons/menu" to="level_holder" method="back_to_menu"]


